# android-client

./: .gitignore  index.html  latest.md  mdui.js  mykeystore.jks  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
public/: AndroidManifest.xml
src/: main.css  main.tsx  vite-env.d.ts
src-plugin/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
src-plugin/android/: build.gradle.kts  local.properties
src-plugin/android/src/androidTest/java/: ExampleInstrumentedTest.kt
src-plugin/android/src/main/java/: AHQStore.kt  Example.kt  ExamplePlugin.kt
src-plugin/android/src/test/java/: ExampleUnitTest.kt
src-plugin/examples/tauri-app/: package.json
src-plugin/examples/tauri-app/src/: App.svelte
src-plugin/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
src-plugin/examples/tauri-app/src-tauri/src/: lib.rs
src-plugin/guest-js/: index.ts
src-plugin/permissions/autogenerated/: reference.md
src-plugin/permissions/schemas/: schema.json
src-plugin/src/: desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: cache.rs  db.rs  downloader.rs  mod.rs  runtime_cache.rs
src-tauri/src/api/routes/: mod.rs
src-tauri/src/utils/: mod.rs
src/app/: app.css  index.tsx
src/app/bottom-nav/: index.tsx
src/app/data/: cache.ts  fetchApps.ts  http.ts  index.ts
src/app/pages/home/: home.css  index.tsx
src/app/pages/home/grid/: index.tsx
src/app/pages/loading/: index.tsx
src/app/pages/settings/: index.tsx
src/app/pages/settings/components/: color.tsx  dark.tsx  styles.css
src/utils/: android.ts  index.ts  test.ts  theme.ts
