[package]
name = "tauri-plugin-ahqstore"
version = "0.0.1"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-ahqstore"

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", features = [
  "build",
] }
tauri-build = { git = "https://github.com/tauri-apps/tauri" }
