[package]
name = "tauri-plugin-ahqstore"
version = "0.0.1"
authors = ["AHQ"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-ahqstore"

[dependencies]
tauri = { version = "2.0.0-rc" }
serde = "1"
thiserror = "1"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }
tauri-build = { version = "2.0.0-rc" }
