[package]
name = "ahqstore-android"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ahqstore_android_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", features = [] }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", features = [
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tauri-plugin-ahqstore = { path = "../src-plugin" }
ahqstore-types = { version = "2.1.1", default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = [
  "json",
  "rustls-tls",
] }
lazy_static = "1.4.0"
